--- a/index.html
+++ b/index.html
@@ -3,7 +3,67 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css'>
     <title>HowAreYouToday?</title>
   </head>
-  <body></body>
+  <body>
+    <header class="layout">
+        <div class="menu">
+            <i class="fi fi-br-menu-burger"></i>
+        </div>
+        <div class="logo">Logo</div>
+        <div class="search-box">
+            <input type="text" class="searchBar" value="검색하기">
+            <button class="button-box">검색</button>
+        </div>
+        <div class="user-actions">
+          <div class="login">Login</div>
+          <div class="register">Register</div>
+    </header>
+
+    <section class="event-banner">
+      <div class="banner-image">
+        <img class="bannerImage" src="./images/mainbanner.jpg" alt="mainimage">
+      </div>
+    </section>
+
+    <div class="new-title">NEW</div>
+
+    <div class="new-item-box">
+      <ul class="new-item-list">
+        <li class="new-item">
+          <a href="#">
+            <img src="./images/newlist3.jpg" alt="newproduct">
+            <span class="name">이름</span>
+            <span class="price">가격</span>
+          </a>
+        </li>
+
+        <li class="new-item">
+          <a href="#">
+            <img src="./images/newlist4.jpg" alt="newproduct">
+            <span class="name">이름</span>
+            <span class="price">가격</span>
+          </a>
+        </li>
+
+        <li class="new-item">
+          <a href="#">
+            <img src="./images/newlist2.jpg" alt="newproduct">
+            <span class="name">이름</span>
+            <span class="price">가격</span>
+          </a>
+        </li>
+
+        <li class="new-item">
+          <a href="#">
+            <img src="./images/newlist5.jpg" alt="newproduct">
+            <span class="name">이름</span>
+            <span class="price">가격</span>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </body>
 </html>
