--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <i id="prev" class="fi fi-rr-arrow-left"></i>
         <i id="next" class="fi fi-rr-arrow-right"></i>
       </div>
-      <ul id="carousel" class="new-item-list carousel-list" style="-webkit-padding-start: 0px;">
+      <ul class="new-item-list" style="-webkit-padding-start: 0px;">
         <li class="new-item">
           <a href="#">
             <img src="./images/newlist3.jpg" alt="newproduct">
@@ -71,7 +71,7 @@
           </a>
         </li>
 
-        <li class="new-item nextItem">
+        <li class="new-item">
           <a href="#">
             <img src="./images/newlist1.jpg" alt="newproduct">
             <span class="name">이름</span>
@@ -79,7 +79,7 @@
           </a>
         </li>
 
-        <li class="new-item nextItem">
+        <li class="new-item">
           <a href="#">
             <img src="./images/newlist2.jpg" alt="newproduct">
             <span class="name">이름</span>
@@ -87,7 +87,7 @@
           </a>
         </li>
 
-        <li class="new-item nextItem">
+        <li class="new-item">
           <a href="#">
             <img src="./images/newlist3.jpg" alt="newproduct">
             <span class="name">이름</span>
@@ -95,7 +95,7 @@
           </a>
         </li>
 
-        <li class="new-item nextItem">
+        <li class="new-item>
           <a href="#">
             <img src="./images/newlist4.jpg" alt="newproduct">
             <span class="name">이름</span>
