--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           </a>
         </li>
 
-        <li class="new-item>
+        <li class="new-item">
           <a href="#">
             <img src="./images/newlist4.jpg" alt="newproduct">
             <span class="name">이름</span>
