--- a/index.html
+++ b/index.html
@@ -33,44 +33,12 @@
 
     <div class="new-title">NEW</div>
 
-    <div class="new-item-box carousel-container">
+    <div class="new-item-box">
       <div class="carousel-buttons">
         <i id="prev" class="fi fi-rr-arrow-left"></i>
         <i id="next" class="fi fi-rr-arrow-right"></i>
       </div>
       <ul class="new-item-list" style="-webkit-padding-start: 0px;">
-        <li class="new-item">
-          <a href="#">
-            <img src="./images/newlist3.jpg" alt="newproduct">
-            <span class="name">이름</span>
-            <span class="price">가격</span>
-          </a>
-        </li>
-
-        <li class="new-item">
-          <a href="#">
-            <img src="./images/newlist4.jpg" alt="newproduct">
-            <span class="name">이름</span>
-            <span class="price">가격</span>
-          </a>
-        </li>
-
-        <li class="new-item">
-          <a href="#">
-            <img src="./images/newlist2.jpg" alt="newproduct">
-            <span class="name">이름</span>
-            <span class="price">가격</span>
-          </a>
-        </li>
-
-        <li class="new-item">
-          <a href="#">
-            <img src="./images/newlist5.jpg" alt="newproduct">
-            <span class="name">이름</span>
-            <span class="price">가격</span>
-          </a>
-        </li>
-
         <li class="new-item">
           <a href="#">
             <img src="./images/newlist1.jpg" alt="newproduct">
@@ -102,9 +70,46 @@
             <span class="price">가격</span>
           </a>
         </li>
+
+        <li class="new-item">
+          <a href="#">
+            <img src="./images/newlist5.jpg" alt="newproduct">
+            <span class="name">이름</span>
+            <span class="price">가격</span>
+          </a>
+        </li>
+
+        <li class="new-item">
+          <a href="#">
+            <img src="./images/newlist6.jpg" alt="newproduct">
+            <span class="name">이름</span>
+            <span class="price">가격</span>
+          </a>
+        </li>
+
+        <li class="new-item">
+          <a href="#">
+            <img src="./images/newlist7.jpg" alt="newproduct">
+            <span class="name">이름</span>
+            <span class="price">가격</span>
+          </a>
+        </li>
+
+        <li class="new-item">
+          <a href="#">
+            <img src="./images/newlist8.jpg" alt="newproduct">
+            <span class="name">이름</span>
+            <span class="price">가격</span>
+          </a>
+        </li>
       </ul>
-      
     </div>
+
+    <footer class="box">
+      <div class="inner-box">
+        아아
+      </div>
+    </footer>
 
     <script src="./index.js"></script>
   </body>
