--- a/index.html
+++ b/index.html
@@ -21,8 +21,16 @@
             <button class="button-box">검색</button>
         </div>
         <div class="user-actions">
-          <div class="login">Login</div>
-          <div class="register">Register</div>
+          <div class="login">
+            <a class="header-nav" href="./login.html">
+              <span>Login</span>
+            </a>
+          </div>
+          <div class="register">
+            <a class="header-nav" href="">
+              <span>Register</span>
+            </a>
+            </div>
     </header>
 
     <section class="event-banner">
