--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
   <body>
     <header class="layout">
         <div class="menu">
-            <i class="fi fi-br-menu-burger"></i>
+            <input type="checkbox" id="menuicon">
+            <label for="menuicon">
+              <span></span>
+              <span></span>
+              <span></span>
+            </label>
         </div>
         <div class="logo">Logo</div>
         <div class="search-box">
@@ -32,6 +37,10 @@
             </a>
             </div>
     </header>
+
+    <aside class="sidebar">
+
+    </aside>
 
     <section class="event-banner">
       <div class="banner-image">
