--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
               <span></span>
               <span></span>
             </label>
+            <div class="sidebar">
+              
+            </div>
         </div>
         <div class="logo">Logo</div>
         <div class="search-box">
@@ -38,9 +41,7 @@
             </div>
     </header>
 
-    <aside class="sidebar">
-
-    </aside>
+    
 
     <section class="event-banner">
       <div class="banner-image">
