--- a/index.html
+++ b/index.html
@@ -20,6 +20,72 @@
               <span></span>
             </label>
             <div class="sidebar">
+              <nav class="sidebar-nav">
+                <ul class="category">
+                  <li>
+                    <a href="#">
+                      <span>여성</span>
+                    </a>
+                  </li>
+
+                  <li>
+                    <a href="#">
+                      <span>남성</span>
+                    </a>
+                  </li>
+
+                  <li>
+                    <a href="#">
+                      <span>키즈</span>
+                    </a>
+                  </li>
+
+                  <li>
+                    <a href="#">
+                      <span>ACC</span>
+                    </a>
+                  </li>
+                </ul>
+
+                <ul class="category-list">
+                <li>
+                  <a href="#">
+                    <span>신상</span>
+                  </a>
+                </li>
+
+                <li>
+                  <a href="#">
+                    <span>모자</span>
+                  </a>
+                </li>
+
+                <li>
+                  <a href="#">
+                    <span>상의</span>
+                  </a>
+                </li>
+
+                <li>
+                  <a href="#">
+                    <span>하의</span>
+                  </a>
+                </li>
+
+                <li>
+                  <a href="#">
+                    <span>원피스</span>
+                  </a>
+                </li>
+
+                <li>
+                  <a href="#">
+                    <span>신발</span>
+                  </a>
+                </li>
+              </ul>
+              </nav>
+
               
             </div>
         </div>
@@ -35,7 +101,7 @@
             </a>
           </div>
           <div class="register">
-            <a class="header-nav" href="">
+            <a class="header-nav" href="./weather.html">
               <span>Register</span>
             </a>
             </div>
@@ -126,6 +192,11 @@
     <footer class="box">
       <div class="inner-info">
         무한상사 유한회사 | 사업자등록번호: 123-45-67890 | 대표자 : 조유리 | 경기도 안산시 행복구 로또로 (당첨동 100층) |  대표번호: 070-000-0000  |  호스팅 서비스 사업자: ZEROBASE  |  통신판매업신고 : 제2023-경기안산-00000 
+      </div>
+
+      <div class="hi">
+        <span>날씨 :</span>
+        <span>지역 :</span>
       </div>
     </footer>
 
