--- a/login.html
+++ b/login.html
@@ -53,43 +53,50 @@
 
       const auth = getAuth();
 
-      document.getElementById("signUpButton").addEventListener("click", (event) => {
-        event.preventDefault(); //새로고침 방지
-        const signUpEmail = document.getElementById("signUpEmail").value;
-        const signUpPassword = document.getElementById("signUpPassword").value;
+      document
+        .getElementById("signUpButton")
+        .addEventListener("click", (event) => {
+          event.preventDefault(); //새로고침 방지
+          const signUpEmail = document.getElementById("signUpEmail").value;
+          const signUpPassword =
+            document.getElementById("signUpPassword").value;
 
-        createUserWithEmailAndPassword(auth, signUpEmail, signUpPassword)
-          .then((userCredential) => {
-            console.log(userCredential);
-            // Signed in
-            const user = userCredential.user;
-            // ...
-          })
-          .catch((error) => {
-            console.log(error);
-            const errorCode = error.code;
-            const errorMessage = error.message;
-            // ..
-          });
-      });
+          createUserWithEmailAndPassword(auth, signUpEmail, signUpPassword)
+            .then((userCredential) => {
+              console.log(userCredential);
+              // Signed in
+              const user = userCredential.user;
+              // ...
+            })
+            .catch((error) => {
+              console.log(error);
+              const errorCode = error.code;
+              const errorMessage = error.message;
+              // ..
+            });
+        });
 
-      document.getElementById("signInButton").addEventListener("click", (event) => {
-        event.preventDefault();
-        const signInEmail = document.getElementById("signInEmail").value;
-        const signInPassword = document.getElementById("signInPassword").value;
-        signInWithEmailAndPassword(auth, signInEmail, signInPassword)
-          .then((userCredential) => {
-            console.log(userCredential);
-            // Signed in
-            const user = userCredential.user;
-            // ...
-          })
-          .catch((error) => {
-            console.log("로그인 실패");
-            const errorCode = error.code;
-            const errorMessage = error.message;
-          });
-      });
+      document
+        .getElementById("signInButton")
+        .addEventListener("click", (event) => {
+          event.preventDefault();
+          const signInEmail = document.getElementById("signInEmail").value;
+          const signInPassword =
+            document.getElementById("signInPassword").value;
+          signInWithEmailAndPassword(auth, signInEmail, signInPassword)
+            .then((userCredential) => {
+              console.log(userCredential);
+              // Signed in
+              const user = userCredential.user;
+              // ...
+              window.location.href = "index.html";
+            })
+            .catch((error) => {
+              console.log("로그인 실패");
+              const errorCode = error.code;
+              const errorMessage = error.message;
+            });
+        });
     </script>
   </body>
 </html>
