--- a/index.html
+++ b/index.html
@@ -23,25 +23,25 @@
               <nav class="sidebar-nav">
                 <ul class="category">
                   <li>
-                    <a href="#">
+                    <a href="./product.html">
                       <span>여성</span>
                     </a>
                   </li>
 
                   <li>
-                    <a href="#">
+                    <a href="./product.html">
                       <span>남성</span>
                     </a>
                   </li>
 
                   <li>
-                    <a href="#">
+                    <a href="./product.html">
                       <span>키즈</span>
                     </a>
                   </li>
 
                   <li>
-                    <a href="#">
+                    <a href="./product.html">
                       <span>ACC</span>
                     </a>
                   </li>
@@ -49,37 +49,37 @@
 
                 <ul class="category-list">
                 <li>
-                  <a href="#">
+                  <a href="./product.html">
                     <span>신상</span>
                   </a>
                 </li>
 
                 <li>
-                  <a href="#">
+                  <a href="./product.html">
                     <span>모자</span>
                   </a>
                 </li>
 
                 <li>
-                  <a href="#">
+                  <a href="./product.html">
                     <span>상의</span>
                   </a>
                 </li>
 
                 <li>
-                  <a href="#">
+                  <a href="./product.html">
                     <span>하의</span>
                   </a>
                 </li>
 
                 <li>
-                  <a href="#">
+                  <a href="./product.html">
                     <span>원피스</span>
                   </a>
                 </li>
 
                 <li>
-                  <a href="#">
+                  <a href="./product.html">
                     <span>신발</span>
                   </a>
                 </li>
