--- a/index.html
+++ b/index.html
@@ -89,7 +89,11 @@
               
             </div>
         </div>
-        <div class="logo">Logo</div>
+        <div class="logo">
+          <a href="./index.html">
+            <span>Logo</span>
+          </a>
+        </div>
         <div class="search-box">
             <input type="text" class="searchBar" value="검색하기">
             <button class="button-box">검색</button>
