--- a/product.html
+++ b/product.html
@@ -89,7 +89,11 @@
               
             </div>
         </div>
-        <div class="logo">Logo</div>
+        <div class="logo">
+          <a href="./index.html">
+            <span>Logo</span>
+          </a>
+        </div>
         <div class="search-box">
             <input type="text" class="searchBar" value="검색하기">
             <button class="button-box">검색</button>
@@ -111,7 +115,7 @@
 
     <section class="event-banner">
       <div class="banner-image">
-        <img class="bannerImage" src="./images/mainbanner.jpg" alt="mainimage">
+        <img class="bannerImage" src="./images/productlistmain.jpg" alt="mainimage">
       </div>
     </section>
 
