--- a/product.html
+++ b/product.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./product.css">
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
 
@@ -119,78 +120,10 @@
       </div>
     </section>
 
-    <div class="new-title">NEW</div>
+    <div class="new-title">제품을 경험하세요.</div>
 
-    <div class="new-item-box">
-      <div class="carousel-buttons">
-        <i id="prev" class="fi fi-rr-arrow-left"></i>
-        <i id="next" class="fi fi-rr-arrow-right"></i>
-      </div>
-      <ul class="new-item-list" style="-webkit-padding-start: 0px;">
-        <li class="new-item">
-          <a href="#">
-            <img src="./images/newlist1.jpg" alt="newproduct">
-            <span class="name">이름</span>
-            <span class="price">가격</span>
-          </a>
-        </li>
-
-        <li class="new-item">
-          <a href="#">
-            <img src="./images/newlist2.jpg" alt="newproduct">
-            <span class="name">이름</span>
-            <span class="price">가격</span>
-          </a>
-        </li>
-
-        <li class="new-item">
-          <a href="#">
-            <img src="./images/newlist3.jpg" alt="newproduct">
-            <span class="name">이름</span>
-            <span class="price">가격</span>
-          </a>
-        </li>
-
-        <li class="new-item">
-          <a href="#">
-            <img src="./images/newlist4.jpg" alt="newproduct">
-            <span class="name">이름</span>
-            <span class="price">가격</span>
-          </a>
-        </li>
-
-        <li class="new-item">
-          <a href="#">
-            <img src="./images/newlist5.jpg" alt="newproduct">
-            <span class="name">이름</span>
-            <span class="price">가격</span>
-          </a>
-        </li>
-
-        <li class="new-item">
-          <a href="#">
-            <img src="./images/newlist6.jpg" alt="newproduct">
-            <span class="name">이름</span>
-            <span class="price">가격</span>
-          </a>
-        </li>
-
-        <li class="new-item">
-          <a href="#">
-            <img src="./images/newlist7.jpg" alt="newproduct">
-            <span class="name">이름</span>
-            <span class="price">가격</span>
-          </a>
-        </li>
-
-        <li class="new-item">
-          <a href="#">
-            <img src="./images/newlist8.jpg" alt="newproduct">
-            <span class="name">이름</span>
-            <span class="price">가격</span>
-          </a>
-        </li>
-      </ul>
+    <div id="product-list">
+      
     </div>
 
     <footer class="box">
@@ -205,5 +138,6 @@
     </footer>
 
     <script src="./index.js"></script>
+    <script src="./product.js"></script>
   </body>
 </html>
