--- a/login.html
+++ b/login.html
@@ -19,92 +19,10 @@
       <div>email : <input type="email" id="signInEmail" /></div>
       <div>password : <input type="password" id="signInPassword" /></div>
       <button type="submit" id="signInButton">로그인하기</button>
+      <button id="googleLogin">구글 아이디로 로그인</button>
       <button>회원가입하기</button>
     </form>
 
-    <script type="module">
-      // Import the functions you need from the SDKs you need
-      import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-      import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-analytics.js";
-
-      // TODO: Add SDKs for Firebase products that you want to use
-      // https://firebase.google.com/docs/web/setup#available-libraries
-
-      // Initialize Firebase
-
-      const firebaseConfig = {
-        apiKey: "AIzaSyDmcsbLk3iQ9aFRgPXWQBqyIgnuvcGt9Vo",
-        authDomain: "howareyoutoday-fcb8c.firebaseapp.com",
-        projectId: "howareyoutoday-fcb8c",
-        storageBucket: "howareyoutoday-fcb8c.appspot.com",
-        messagingSenderId: "386825384877",
-        appId: "1:386825384877:web:ee132b10d9e4652330e724",
-        measurementId: "G-36S480MPJV",
-      };
-
-      const app = initializeApp(firebaseConfig);
-      const analytics = getAnalytics(app);
-
-      import {
-        getAuth,
-        createUserWithEmailAndPassword,
-        signInWithEmailAndPassword,
-      } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
-
-      const auth = getAuth();
-      const user = auth.currentUser;
-      if (user !== null) {
-        const displayName = user.displayName;
-        const userEmail = user.email;
-        const photoURL = user.photoURL;
-        const emailVerified = user.emailVerified;
-        const uid = user.uid;
-      }
-
-      document
-        .getElementById("signUpButton")
-        .addEventListener("click", (event) => {
-          event.preventDefault(); //새로고침 방지
-          const signUpEmail = document.getElementById("signUpEmail").value;
-          const signUpPassword =
-            document.getElementById("signUpPassword").value;
-
-          createUserWithEmailAndPassword(auth, signUpEmail, signUpPassword)
-            .then((userCredential) => {
-              console.log(userCredential);
-              // Signed up
-              const user = userCredential.user;
-              // ...
-            })
-            .catch((error) => {
-              console.log(error);
-              const errorCode = error.code;
-              const errorMessage = error.message;
-              // ..
-            });
-        });
-
-      document
-        .getElementById("signInButton")
-        .addEventListener("click", (event) => {
-          event.preventDefault();
-          const signInEmail = document.getElementById("signInEmail").value;
-          const signInPassword =
-            document.getElementById("signInPassword").value;
-          signInWithEmailAndPassword(auth, signInEmail, signInPassword)
-            .then((userCredential) => {
-              console.log(userCredential);
-              // Signed in
-              const user = userCredential.user;
-              sessionStorage.setItem("user", JSON.stringify(user));
-              window.location.href = "index.html";
-            })
-            .catch((error) => {
-              console.log("로그인 실패");
-              const errorCode = error.code;
-              const errorMessage = error.message;
-            });
-        });
-    </script>
+    <script type="module" src="./login.js"></script>
   </body>
 </html>
