--- a/login.html
+++ b/login.html
@@ -3,9 +3,109 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css">
     <title>로그인</title>
   </head>
   <body>
+    <header class="layout">
+      <div class="menu">
+          <input type="checkbox" id="menuicon">
+          <label for="menuicon">
+            <span></span>
+            <span></span>
+            <span></span>
+          </label>
+          <div class="sidebar">
+            <nav class="sidebar-nav">
+              <ul class="category">
+                <li>
+                  <a href="./product.html">
+                    <span>여성</span>
+                  </a>
+                </li>
+
+                <li>
+                  <a href="./product.html">
+                    <span>남성</span>
+                  </a>
+                </li>
+
+                <li>
+                  <a href="./product.html">
+                    <span>키즈</span>
+                  </a>
+                </li>
+
+                <li>
+                  <a href="./product.html">
+                    <span>ACC</span>
+                  </a>
+                </li>
+              </ul>
+
+              <ul class="category-list">
+              <li>
+                <a href="./product.html">
+                  <span>신상</span>
+                </a>
+              </li>
+
+              <li>
+                <a href="./product.html">
+                  <span>모자</span>
+                </a>
+              </li>
+
+              <li>
+                <a href="./product.html">
+                  <span>상의</span>
+                </a>
+              </li>
+
+              <li>
+                <a href="./product.html">
+                  <span>하의</span>
+                </a>
+              </li>
+
+              <li>
+                <a href="./product.html">
+                  <span>원피스</span>
+                </a>
+              </li>
+
+              <li>
+                <a href="./product.html">
+                  <span>신발</span>
+                </a>
+              </li>
+            </ul>
+            </nav>
+
+            
+          </div>
+      </div>
+      <div class="logo">
+        <a href="./index.html">
+          <span>Logo</span>
+        </a>
+      </div>
+      <div class="search-box">
+          <input type="text" class="searchBar" value="검색하기">
+          <button class="button-box">검색</button>
+      </div>
+      <div class="user-actions">
+        <div class="login">
+          <a class="header-nav" href="./login.html">
+            <span>Login</span>
+          </a>
+        </div>
+        <div class="register">
+          <a class="header-nav" href="./weather.html">
+            <span>Register</span>
+          </a>
+          </div>
+  </header>
     <form action="">
       <h1>회원가입</h1>
       <div>email : <input type="email" id="signUpEmail" /></div>
@@ -23,6 +123,16 @@
       <button>회원가입하기</button>
     </form>
 
+    <footer class="box">
+      <div class="inner-info">
+        무한상사 유한회사 | 사업자등록번호: 123-45-67890 | 대표자 : 조유리 | 경기도 안산시 행복구 로또로 (당첨동 100층) |  대표번호: 070-000-0000  |  호스팅 서비스 사업자: ZEROBASE  |  통신판매업신고 : 제2023-경기안산-00000 
+      </div>
+
+      
+    </footer>
+
+
+    <script src="./product.js"></script>
     <script type="module" src="./login.js"></script>
   </body>
 </html>
