회원가입 로그인 분리

--- a/register.html
+++ b/register.html
@@ -106,13 +106,12 @@
           </a>
           </div>
   </header>
-
     <form action="">
-      <h1>로그인</h1>
-      <div>email : <input type="email" id="signInEmail" /></div>
-      <div>password : <input type="password" id="signInPassword" /></div>
-      <button type="submit" id="signInButton">로그인하기</button>
-      <button id="googleLogin">구글 아이디로 로그인</button>
+      <h1>회원가입</h1>
+      <div>email : <input type="email" id="signUpEmail" /></div>
+      <div>password : <input type="password" id="signUpPassword" /></div>
+      <button type="submit" id="signUpButton">회원가입하기</button>
+      <button>로그인하기</button>
     </form>
 
     <footer class="box">
