날씨 api 띄우기

--- a/index.html
+++ b/index.html
@@ -85,8 +85,6 @@
                 </li>
               </ul>
               </nav>
-
-              
             </div>
         </div>
         <div class="logo">
@@ -105,12 +103,19 @@
             </a>
           </div>
           <div class="register">
-            <a class="header-nav" href="./register.html">
+            <a class="header-nav" href="./weather.html">
               <span>Register</span>
             </a>
             </div>
     </header>
 
+    <div class="weatherBanner" id="weatherBanner">
+      <div class="weatherInner">
+      오늘의 날씨를 알아보세요.
+        <p>당신은 지금 <span id="yourLocation"></span></p>
+        <p>오늘의 온도는 <span id="yourTemp"></span></p>
+      </div>
+    </div>
     
 
     <section class="event-banner">
