--- a/login.html
+++ b/login.html
@@ -114,6 +114,8 @@
       <button type="submit" id="signInButton">로그인하기</button>
       <button id="googleLogin">구글 아이디로 로그인</button>
     </form>
+    <div id="signInError"></div>
+
 
     <footer class="box">
       <div class="inner-info">
@@ -122,6 +124,7 @@
 
       
     </footer>
+
 
 
     <script src="./product.js"></script>
