로그인 회원가입 페이지 나누기

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </a>
           </div>
           <div class="register">
-            <a class="header-nav" href="./weather.html">
+            <a class="header-nav" href="./register.html">
               <span>Register</span>
             </a>
             </div>
