--- a/login.html
+++ b/login.html
@@ -110,7 +110,7 @@
     <form action="">
       <h1>로그인</h1>
       <div>email : <input type="email" id="signInEmail" /></div>
-      <div>password : <input type="password" id="signInPassword" /></div>
+      <div>password : <input type="password" id="signInPassword" autocomplete="current-password" /></div>
       <button type="submit" id="signInButton">로그인하기</button>
       <button id="googleLogin">구글 아이디로 로그인</button>
     </form>
@@ -127,7 +127,7 @@
 
 
 
-    <script src="./product.js"></script>
+
     <script type="module" src="./login.js"></script>
   </body>
 </html>
